--- a/HTML/ödev1/index.html
+++ b/HTML/ödev1/index.html
@@ -1,58 +1,14 @@
 <!-- Bu kısımda büyük başlıkla adım yazıyor -->
 <h1>Arda Şen</h1>
-
 <!-- Bu kısımda alt başlık verildi. -->
 <h2>Hakkımda</h2>
-
 <!-- Bu kısımda hakkımda açıklama yaptım. -->
-<div>
-    <p>Merhaba, ben Arda. İstanbul'da yaşıyorum. Aslen Orduluyum. Bugüne dek bir çok teknoloji ile ilgilendim.
-        Geçmiş dönemde 6 aylık bir flutter deneyimim oldu. Şuanda hem flutter da hemde full-stack tarafında kendimi
-        geliştirmeye çalışıyorum. Akbank'ın bu eğitimi bana büyük bir imkan sağladı.</p>
-</div>
-
-<h2>İlgi Alanlarım</h2>
-<ol>
-    <li>Film <ul>
-            <li><a href="https://www.imdb.com/title/tt0112471/" target="_blank">Before Sunrise</a></li>
-            <li>Before Sunset</li>
-            <li>Before Midnight</li>
-        </ul>
-    </li>
-    <li>Dizi <ul>
-            <li><a href="https://www.imdb.com/title/tt2661044/?ref_=nv_sr_srsg_0" target="_blank">The 100 </a></li>
-            <li>S.A.O</li>
-            <li>Brooklyn Nine-Nine</li>
-        </ul>
-    </li>
-    <li>Kitap <ul>
-            <li><a
-                    href="https://www.goodreads.com/book/show/783510.Nutuk?from_search=true&from_srp=true&qid=pvibQKaLYN&rank=1" target="_blank">Nutuk
-                </a></li>
-            <li>Bilinmeyen Bir Kadının Mektubu</li>
-            <li>İnsan Ne ile Yaşar</li>
-        </ul>
-    </li>
-</ol>
-<!-- Filmler -->
+<p>Merhaba, ben Arda. İstanbul'da yaşıyorum. Aslen Orduluyum. Bugüne dek bir çok teknoloji ile ilgilendim.
+Geçmiş dönemde 6 aylık bir flutter deneyimim oldu. Şuanda hem flutter da hemde full-stack tarafında kendimi
+ geliştirmeye çalışıyorum. Akbank'ın bu eğitimi bana büyük bir imkan sağladı.</p>
+ <!-- Filmler -->
 <h2>Sevdiğim Filmler</h2>
-
 <h3>The Notebook</h3>
-<img src="http://3.bp.blogspot.com/-ft8CWtBs5sc/TZXBcO9nODI/AAAAAAAAFBI/v3lF-kZ2-uo/s1600/the_notebook_020.jpg"
-    alt="theNotebook" >
-<div>
-    <p>Hikayesi ve oyunculuklarıyla zamanın nasıl geçtiğini anlamadan izlediğim enfes bir film. Gerçek hikayeden
-        esinlenerek
-        yapılmış olan bu yapım Dram ve Romantizmi konu alıyor.</p>
-</div>
+<p>Hikayesi ve oyunculuklarıyla zamanın nasıl geçtiğini anlamadan izlediğim enfes bir film. Gerçek hikayeden esinlenerek yapılmış olan bu yapım Dram ve Romantizmi konu alıyor.</p>
 <h3>Zamanda Aşk</h3>
-
-<img src="https://i2.milimaj.com/i/milliyet/75/1200x675/5d282795ec10bb3130297854.jpg"
-    alt="theNotebook">
-<div>
-    <p>Sevdiğim oyuncuları barındıran kasta sahip olan bir film. Geçmişin ne olursa olsun kontrol altında
-        tutulamayacağını
-        buna bağlı olarak geleceğin milyonlarca ihtimalden var olduğunu şahane bir şekilde konu almış bir Romantik
-        yapım.
-    </p>
-</div>
+<p>Sevdiğim oyuncuları barındıran kasta sahip olan bir film. Geçmişin ne olursa olsun kontrol altında tutulamayacağını buna bağlı olarak geleceğin milyonlarca ihtimalden var olduğunu şahane bir şekilde konu almış bir Romantik yapım.</p>
