--- a/CSSEGITIM/ödev1/about-us.html
+++ b/CSSEGITIM/ödev1/about-us.html
@@ -13,9 +13,9 @@
             <nav>
                 <div>
                     <ul>
-                        <li><a href="index.html">Ana Sayfa</a></li>
-                        <li><a href="about-us.html">About-Me</a></li>
-                        <li><a href="contact.html">İletişim</a></li>
+                        <li><a style="color:black "href="index.html">Ana Sayfa</a></li>
+                        <li><a style="color:black "href="about-us.html">About-Me</a></li>
+                        <li><a style="color:black "href="contact.html">İletişim</a></li>
                     </ul>
                 </div>
             </nav>
